# Scout-LIO

./: .gitignore  CHANGES.txt  CMakeLists.txt  LICENSE  README.md
Log/: lio_sam_featureExtraction.INFO  lio_sam_featureExtraction.lab-307.lab-307.log.INFO.20211027-215930.19477
cmake/: geographic.cmake  glog.cmake
config/: bag_info.txt  params.yaml  params_ori.yaml
include/: GlogWrapper.h  tic_toc.h  utility.h
launch/: lio_debug.launch  run.launch
launch/include/: module_navsat.launch
launch/include/config/: robot.urdf.xacro  rviz.rviz
msg/: cloud_info.msg
pcd2pgm/src/: test.cpp
src/: GlogWrapper.cpp  featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
test/: CMakeLists.txt  test_BA-3Dto2D.cpp
